[CoreFrontend] CList refactor; CGallery WrapComp & fix; Currency settings moved into cmsconfig

--- a/system/core/frontend/src/components/GalleryBlock/CGallery.module.scss
+++ b/system/core/frontend/src/components/GalleryBlock/CGallery.module.scss
@@ -58,3 +58,9 @@
 .swiperZommedIn {
     box-shadow: 0 3px 7px 0 rgba(0, 0, 0, 0.1), 0 0px 24px 0 rgba(0, 0, 0, 0.1);
 }
+
+.swiperPagination {
+    background-color: rgba(0,0,0,0.1);
+    padding: 5px;
+    border-radius: 10px;
+}
